[STRUCTURE] Setup the directories and librairies

--- a/01-Project Structure Initialization/pubspec.yaml
+++ b/01-Project Structure Initialization/pubspec.yaml
@@ -18,6 +18,8 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   intl: any
+  dartz: ^0.10.1
+  equatable: ^2.0.5
 
 dev_dependencies:
   flutter_test:
