--- a/02 - Subject Feature Setup/pubspec.yaml
+++ b/02 - Subject Feature Setup/pubspec.yaml
@@ -10,8 +10,6 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -20,12 +18,19 @@ dependencies:
   intl: any
   dartz: ^0.10.1
   equatable: ^2.0.5
+  floor: ^1.4.1
+  sqflite: ^2.2.4+1
+  get_it: ^7.2.0
+  bloc: ^8.1.1
+  flutter_bloc: ^8.1.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
   flutter_lints: ^2.0.0
+  floor_generator: ^1.4.1
+  build_runner: ^2.1.2
 
 # The following section is specific to Flutter packages.
 flutter:
